--- a/mod02_test_bot_predictor.ipynb
+++ b/mod02_test_bot_predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c34bbf0",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7dbdeb0d",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8a0a1867",
    "metadata": {},
    "outputs": [],
@@ -109,15 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e81d289f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_PATH = \"mod03_data/train.csv\"\n",
+    "TRAIN_PATH = \"mod02_data/train.csv\"\n",
     "train = pd.read_csv(TRAIN_PATH)\n",
     "\n",
-    "TEST_PATH = \"mod03_data/test.csv\"\n",
+    "TEST_PATH = \"mod02_data/test.csv\"\n",
     "test = pd.read_csv(TEST_PATH)"
    ]
   },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3c717a32",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "99daf9b8",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "77251478",
    "metadata": {},
    "outputs": [],
@@ -190,10 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a7aa6fa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tp': 363,\n",
+       " 'tn': 2637,\n",
+       " 'fp': 0,\n",
+       " 'fn': 0,\n",
+       " 'misclassification_rate': 0.0,\n",
+       " 'false_positive_rate': 0.0,\n",
+       " 'false_negative_rate': 0.0}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "confusion_matrix_and_metrics(y_train, y_pred_train)"
    ]
@@ -208,10 +225,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "17883ccd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tp': 41,\n",
+       " 'tn': 800,\n",
+       " 'fp': 74,\n",
+       " 'fn': 85,\n",
+       " 'misclassification_rate': 0.159,\n",
+       " 'false_positive_rate': 0.08466819221967964,\n",
+       " 'false_negative_rate': 0.6746031746031746}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "confusion_matrix_and_metrics(y_test, y_pred_test)"
    ]
@@ -237,7 +271,7 @@
    "id": "54e546c7",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "Based on the misclassification raate I can be confident im my ability to predict a bot because the low error rate one the test data suggests that the model is able to generlize beyond the tarining data and caapture the patterns. While the model is not perfect and does make some errors, its overall proformance is reliable."
    ]
   },
   {
@@ -253,7 +287,7 @@
    "id": "d27f7f41",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "False positives occur when the model incorrectly classifies a legitimate human user as a bot. This can result in unfair account restrictions, loss of sccess for real users, and decreased trust in the platform. Over time, frequent false positives could harm user experience and rais concerns about the fairness of automated decision-making systems."
    ]
   },
   {
@@ -269,13 +303,13 @@
    "id": "ec7f5ff7",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "False negatives occur when the model fails to identify an actual bot. This allows bots to remain active on the platform, where they may spread spam, misinformation, or manipulate online media. As a result, false negatives reduce the effectivness of the detection system and can negatively impact the overall quality and safety."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
